<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Account Preferences">

        <PreferenceScreen
            android:title="@string/user_profile"
            android:summary="@string/profile_summary">

            <intent android:action="android.intent.action.VIEW"
                    android:targetPackage="com.example.ayoolasolomon.myruns"
                    android:targetClass="com.example.ayoolasolomon.myruns.ProfileActivity"
                />

        </PreferenceScreen>

        <CheckBoxPreference
            android:key="privacy_setting"
            android:title="@string/privacy_setting"
            android:summary="@string/records_anonymous" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/additional_settings" >

        <ListPreference
            android:key="unit_preferences"
            android:title="@string/unit_preference"
            android:summary="@string/unit_distance_value"
            android:entries="@array/unit_distance_values"
            android:entryValues="@array/unit_distance_values"
            android:dialogTitle="@string/unit_preference" />

        <EditTextPreference
            android:key="comment"
            android:title="@string/comment"
            android:summary="@string/comment_suggestion"
            android:dialogTitle="@string/comment"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Misc">

        <PreferenceScreen
            android:title="@string/homepage"
            android:summary="@string/portfolio">

            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/portfolio"
                />

        </PreferenceScreen>

    </PreferenceCategory>


</PreferenceScreen>
